force-app/main/default/objects/Default_Case_Team__c/Default_Case_Team__c.object-meta.xml
<CustomObject>
    <description>NPS cases send case creation notification email to a list of users defined per Case Owner. This object keeps the list of users for each case owner.</description>
    <label>Default Case Team</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Default Case Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Case Teams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>