force-app/main/default/objects/Default_Case_Team__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User who will receive the case creation email.</inlineHelpText>
    <label>Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Default_Case_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>