force-app/main/default/objects/Default_Case_Team__c/listViews/My_Team.listView-meta.xml
<ListView>
    <fullName>My_Team</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Team</label>
</ListView>